# NikolExamples

./: .gitmodules  CMakeLists.txt  README.md
examples/basic_3d/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shaders.h  transform.cpp  trasform.h  vertex.h
examples/basic_3d/shaders/: default_shader.glsl  default_shader.hlsl
examples/batch_renderer/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.h  shaders.h
examples/hello_nikol/: CMakeLists.txt  hello_nikol.cpp
